nuget packages update

--- a/Ocean.Inside.Project/Views/Home/Index.cshtml
+++ b/Ocean.Inside.Project/Views/Home/Index.cshtml
@@ -55,7 +55,7 @@
                         <div class="range range-xs-center">
                             <div class="cell-lg-10">
                                 <div>
-                                    <h1 class="text-white">Компания путешествий "Океан внутри"</h1>
+                                    <h1 class="text-white">Компания путешествий <br /> "Океан внутри"</h1>
                                 </div>
                                 <div class="offset-top-8">
                                     <p class="h6 text-white">Ты откроешь свой океан в наших путешествиях!</p>
