killing of subscription form

--- a/Ocean.Inside.Project/Views/Home/Index.cshtml
+++ b/Ocean.Inside.Project/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en" class="wide smoothscroll">
 <head>
-    <title>Vacation Travel</title>
+    <title>Океан внутри</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,8 +18,8 @@
                     <div class="rd-navbar-inner">
                         <div class="rd-navbar-panel">
                             <button data-rd-navbar-toggle=".rd-navbar-nav-wrap" class="rd-navbar-toggle"><span></span></button>
-                            <div class="rd-navbar-brand veil reveal-md-block"><a href="index.html" class="brand-name"><img height="55" src="images/logo-light-299x60.png" alt=""></a></div>
-                            <div class="rd-navbar-brand veil-md reveal-tablet-md-inline-block"><a href="index.html" class="brand-name"><img height="45" src="images/logo-dark-299x60.png" alt=""></a></div>
+                            <div class="rd-navbar-brand veil reveal-md-block"><a href="index.html" class="brand-name"><img height="55" src="images/logo.jpg" alt=""></a></div>
+                            <div class="rd-navbar-brand veil-md reveal-tablet-md-inline-block"><a href="index.html" class="brand-name"><img height="45" src="images/logo.jpg" alt=""></a></div>
                         </div>
                         <div class="rd-navbar-nav-wrap">
                             <ul class="rd-navbar-nav">
@@ -83,7 +83,7 @@
                     <div class="range range-xs-center offset-top-45">
                         <div class="cell-sm-5 cell-md-4">
                             <div data-wow-delay=".2s" class="box-offer wow fadeInLeft">
-                                <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="images/370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
+                                <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="/images/box-offer-01-370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
                                 <div class="box-offer-caption text-left">
                                     <div class="pull-left">
                                         <div class="box-offer-title text-ubold"><a href="tours-single.html" class="text-gray-base">Italy</a></div>
@@ -103,7 +103,7 @@
                         </div>
                         <div class="cell-sm-5 cell-md-4 offset-top-30 offset-sm-top-0">
                             <div data-wow-delay=".2s" class="box-offer wow bounceIn">
-                                <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="images/370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
+                                <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="/images/box-offer-02-370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
                                 <div class="box-offer-caption text-left">
                                     <div class="pull-left">
                                         <div class="box-offer-title text-ubold"><a href="tours-single.html" class="text-gray-base">Thailand</a></div>
@@ -123,7 +123,7 @@
                         </div>
                         <div class="cell-sm-5 cell-md-4 offset-top-30 offset-md-top-0">
                             <div data-wow-delay=".2s" class="box-offer wow fadeInRight">
-                                <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="images/370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
+                                <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="/images/box-offer-03-370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
                                 <div class="box-offer-caption text-left">
                                     <div class="pull-left">
                                         <div class="box-offer-title text-ubold"><a href="tours-single.html" class="text-gray-base">France</a></div>
@@ -143,7 +143,7 @@
                         </div>
                         <div class="cell-sm-5 cell-md-4 offset-top-30">
                             <div data-wow-delay=".2s" class="box-offer wow fadeInLeft">
-                                <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="images/370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
+                                <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="/images/box-offer-04-370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
                                 <div class="box-offer-caption text-left">
                                     <div class="pull-left">
                                         <div class="box-offer-title text-ubold"><a href="tours-single.html" class="text-gray-base">England</a></div>
@@ -163,7 +163,7 @@
                         </div>
                         <div class="cell-sm-5 cell-md-4 offset-top-30">
                             <div data-wow-delay=".2s" class="box-offer wow bounceIn">
-                                <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="images/370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
+                                <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="/images/box-offer-05-370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
                                 <div class="box-offer-caption text-left">
                                     <div class="pull-left">
                                         <div class="box-offer-title text-ubold"><a href="tours-single.html" class="text-gray-base">Turkey</a></div>
@@ -183,7 +183,7 @@
                         </div>
                         <div class="cell-sm-5 cell-md-4 offset-top-30">
                             <div data-wow-delay=".2s" class="box-offer wow fadeInRight">
-                                <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="images/370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
+                                <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="images/box-offer-06-370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
                                 <div class="box-offer-caption text-left">
                                     <div class="pull-left">
                                         <div class="box-offer-title text-ubold"><a href="tours-single.html" class="text-gray-base">United States</a></div>
@@ -207,7 +207,7 @@
             </section>
             <section data-wow-delay=".2s" class="wow fadeIn section-parallax">
                 <div data-on="false" data-md-on="true" class="rd-parallax">
-                    <div data-speed="0.25" data-type="media" data-url="images/1920x900.jpg" class="rd-parallax-layer"></div>
+                    <div data-speed="0.25" data-type="media" data-url="/images/background-05-1920x900.jpg" class="rd-parallax-layer"></div>
                     <div data-speed="0" data-type="html" data-md-fade="false" class="rd-parallax-layer">
                         <div class="bg-overlay-inverse-md-darker">
                             <div class="shell section-80 section-md-top-70">
@@ -324,7 +324,7 @@
             <section data-wow-delay=".2s" class="section-70 section-md-bottom-80 wow fadeIn">
                 <div class="shell">
                     <div>
-                        <h3>What Our Clients Say</h3>
+                        <h3>Отзывы наших клиентов</h3>
                     </div>
                     <div class="offset-top-10">
                         <p>Our clients' testimonials are the best proof of our high level of service</p>
@@ -334,7 +334,7 @@
                             <div data-items="1" data-sm-items="2" data-lg-items="3" data-stage-padding="5" data-loop="false" data-margin="30" data-mouse-drag="false" data-dots="true" data-nav="true" class="owl-carousel owl-dots-primary">
                                 <div class="owl-item">
                                     <div class="team-member">
-                                        <div class="team-member-img-wrap"><img src="images/100x100.jpg" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
+                                        <div class="team-member-img-wrap"><img src="/images/100x100.jpg" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
                                         <div class="team-member-body">
                                             <div class="offset-top-20">
                                                 <div class="team-member-title text-small text-ubold text-uppercase text-spacing-200 text-gray-base">Lisa Evans</div>
@@ -404,7 +404,7 @@
             </section>
             <section data-wow-delay=".2s" class="context-dark wow fadeIn section-parallax">
                 <div data-on="false" data-md-on="true" class="rd-parallax">
-                    <div data-speed="0.05" data-type="media" data-url="images/1920x900.jpg" class="rd-parallax-layer"></div>
+                    <div data-speed="0.05" data-type="media" data-url="/images/background-06-1920x900.jpg" class="rd-parallax-layer"></div>
                     <div data-speed="0" data-type="html" data-md-fade="false" class="rd-parallax-layer">
                         <div class="bg-overlay-inverse-md-darker">
                             <div class="shell section-80 section-lg-top-145 section-lg-bottom-295">
@@ -501,7 +501,7 @@
             </section>
             <section class="context-dark wow fadeIn section-parallax">
                 <div data-on="false" data-md-on="true" class="rd-parallax">
-                    <div data-speed="0.15" data-type="media" data-url="images/1920x900.jpg" class="rd-parallax-layer"></div>
+                    <div data-speed="0.15" data-type="media" data-url="/images/background-07-1920x900.jpg" class="rd-parallax-layer"></div>
                     <div data-speed="0" data-type="html" data-md-fade="false" class="rd-parallax-layer">
                         <div class="bg-overlay-inverse-md-darker">
                             <div class="shell section-80 section-lg-top-145 section-lg-bottom-295">
@@ -523,7 +523,7 @@
                     <div class="cell-sm-8 cell-md-12">
                         <div class="range range-xs-center">
                             <div class="cell-sm-6 cell-md-3 cell-lg-4 cell-md-push-1">
-                                <a href="index.html"><img height="60" src="images/logo-dark-299x60.png" alt=""></a>
+                                <a href="index.html"><img height="60" src="/images/logo.jpg" alt=""></a>
                                 <div class="offset-top-20 inset-lg-right-80">
                                     <p class="text-small">For over 30 years we have been creating inspirational tailor-made holidays and are proud of our reputation</p>
                                 </div>
@@ -539,52 +539,6 @@
                                     </ul>
                                 </div>
                                 <div class="offset-top-20 offset-md-top-40">
-                                    <button type="button" data-toggle="modal" data-target="#subscribe" style="min-width:160px;" class="btn btn-primary">Subscribe</button>
-                                    <div id="subscribe" tabindex="-1" role="dialog" class="modal modal-custom fade text-center">
-                                        <div role="document" class="modal-dialog">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">×</span></button>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <div class="shell">
-                                                        <div class="range range-xs-center range-xs-middle">
-                                                            <div class="cell-sm-6 bg-image bg-image-1"></div>
-                                                            <div class="cell-sm-6">
-                                                                <div class="modal-body-column-content">
-                                                                    <div>
-                                                                        <h5 class="text-ubold">
-                                                                            Subscribe to <br class="veil reveal-lg-inline-block">
-                                                                            our newsletter
-                                                                        </h5>
-                                                                    </div>
-                                                                    <div class="offset-top-15">
-                                                                        <p class="text-italic text-small text-gray-base">Subscribe and <code class="text-ubold">get 5% off</code> on your first tour!</p>
-                                                                    </div>
-                                                                    <div class="offset-top-35">
-                                                                        <form data-form-output="form-output-global" data-form-type="contact" method="post" action="bat/rd-mailform.php" class="rd-mailform rd-mailform-subscribe">
-                                                                            <div class="form-group form-group-xs">
-                                                                                <label for="contact-email" class="form-label">Enter Your email here...</label>
-                                                                            </div>
-                                                                            <button type="submit" class="btn btn-block btn-primary">SUBSCRIBE</button>
-                                                                        </form>
-                                                                    </div>
-                                                                    <div class="offset-top-35">
-                                                                        <ul class="list-inline list-primary list-inline-13">
-                                                                            <li class="text-center"><a href="#" class="icon fa fa-facebook-f text-gray-base"></a></li>
-                                                                            <li class="text-center"><a href="#" class="icon fa fa-twitter text-gray-base"></a></li>
-                                                                            <li class="text-center"><a href="#" class="icon fa fa-youtube text-gray-base"></a></li>
-                                                                            <li class="text-center"><a href="#" class="icon fa fa-linkedin text-gray-base"></a></li>
-                                                                        </ul>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                             <div class="cell-xs-8 cell-sm-12 cell-md-6 offset-top-40 offset-md-top-0 cell-md-push-2">
